Bug 92821 - Image freezes, when using preferred-compression lz4
Summary: Image freezes, when using preferred-compression lz4
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: server (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Lukas Venhoda
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-04 17:52 UTC by Lukas Venhoda
Modified: 2015-12-17 12:02 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Lukas Venhoda 2015-11-04 17:52:33 UTC
When using --spice-preferred-compression=lz4 image in virt-viewer freezes.
This is probably because server doesn't support lz4.
Should probably fallback to a different image compression, when server doesn't support lz4

How to reproduce:
1. Connect to VM using virt-viewer with option
--spice-preferred-compression=lz4
2. Try to open a folder, or right click on desktop.
Comment 1 Victor Toso 2015-11-04 18:40:41 UTC
Double check if your spice-server has this commit as well
http://cgit.freedesktop.org/spice/spice/commit/?id=1aa5185de2f
Comment 2 Pavel Grunt 2015-12-11 14:09:19 UTC
the server stops sending images, changing the component
Comment 3 Lukas Venhoda 2015-12-17 12:02:40 UTC
Fix in commit 6c4f11191c8eb343a53c70a6c79fdb03158ef1df in spice.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.